# rust-octree

./: .gitignore  .travis.yml  Cargo.toml  README.md  README.org
benches/: my_benchmark.rs
benches/data/: 1crn.xyz
docs/: octree.odt  octree.org
examples/: demo.rs
examples/data/: 3wu2.xyz  result.txt
scripts/: bench.py
src/: lib.rs  octant.rs  octree.rs  query.rs  types.rs
tests/: octree.rs
tests/data/: pdb4rhv.xyz  test.xyz
