# cargo

# [[file:~/Workspace/Programming/gchemol-rs/octree/octree.note::*cargo][cargo:1]]
[package]
name = "octree"
version = "0.0.6"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
log = "^0.4"
vecfx = { git = "https://github.com/gchemol/vecfx.git" }
failure = "0.1"

[dev-dependencies]
rayon = "1"
criterion = "*"
timeit = "*"
approx = "*"

[[bench]]
name = "my_benchmark"
harness = false
# cargo:1 ends here
