# [[file:~/Workspace/Programming/gchemol-rs/octree/octree.note::*cargo][cargo:1]]
[package]
name = "octree"
version = "0.1.0"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Octree algorithm for nearest neighbor search in 3D space"
homepage = "https://github.com/ybyygu/rust-octree"
repository = "https://github.com/ybyygu/rust-octree"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
vecfx = "0.1"

[dev-dependencies]
rayon = "1"
criterion = "0.3"
timeit = "0.1"
approx = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
# cargo:1 ends here
